--- a/statisticsBACKUP.html
+++ b/statisticsBACKUP.html
@@ -1,7 +1,11 @@
-<p>&nbsp;</p>
-<!-- statistics file for backup server -->
-<p>&nbsp;</p>
-<p></p>
+ <!DOCTYPE html>
+<html>
+<!-- statistics file for backup/offline server -->
+<head>
+    <title>Official DUINO-COIN Pool</title>
+    <link rel="icon" href="https://icon-library.net/images/statistics-icon-png/statistics-icon-png-10.jpg">
+    <link rel="stylesheet" href="styles.css">
+</head>
 <div>
 <div>
 <h1><span style="color: #ffcc00;">&nbsp; &nbsp;DUINO-COIN Official Pool</span></h1>
