--- a/index.html
+++ b/index.html
@@ -402,11 +402,11 @@
                                     <div class="dropdown-menu" id="dropdown-menu4" role="menu">
                                         <div class="dropdown-content">
                                             <div class="content m-3">
-                                                <b>CPU</b>: AMD EPYC 7281 @ 2.1 GHz (3 cores)<br>
-                                                <b>RAM</b>: 4 GB<br>
+                                                <b>CPU</b>: AMD EPYC 7281 @ 2.1 GHz (4 cores)<br>
+                                                <b>RAM</b>: 8 GB<br>
                                                 <b>OS</b>: Debian 10 Buster<br>
                                                 <b>Storage</b>: 40 GB SSD<br>
-                                                <b>Provider</b>: Scaleway (DEV-1M)<br>
+                                                <b>Provider</b>: Scaleway (DEV-1L)<br>
                                                 <b>Purpose</b>: The master node that processes transactions,
                                                 stores user wallets, and provides API functions. If there are no
                                                 other nodes available, it can also handle the miners.
