--- a/index.html
+++ b/index.html
@@ -1034,11 +1034,11 @@ function update_stats() {
                                 'rgba(0, 148, 50, 1.0)',
                                 '#EF7A44'
                             ],
-                            borderWidth: 2.0
+                            borderWidth: 1.0
                         }]
                     },
                     options: {
-                        rotation: (-0.47 * Math.PI) - (25 / 180 * Math.PI),
+                        rotation: (Math.PI) - (120 / 180 * Math.PI),
                         animation: {
                             duration: 1500
                         },
@@ -1062,10 +1062,10 @@ function update_stats() {
                                 shadowOffsetX: 0,
                                 shadowOffsetY: 0,
                                 shadowColor: 'rgba(0,0,0,0.5)',
-                                arc: false,
+                                arc: true,
                                 position: 'border',
                                 overlap: false,
-                                outsidePadding: 12,
+                                outsidePadding: 6,
                                 textMargin: 6
                             }
                         }
